    debhelper version 7.4.17.

  [ Otavio Salvador ]
  * kfreebsd-{amd64,i386}: depends on isc-dhcp-client-udeb (as it replaces
    the dhcp3-client-udeb).
  * dhcp: drop dhcp3 compatibility since isc-dhcp looks exactly as
    regular dhclient.

  [ Aurelien Jarno ]
  * simplify kfreebsd dependencies.
  * depends on freebsd-net-tools-udeb on kfreebsd.

 -- Frans Pop <fjp@debian.org>  Thu, 08 Apr 2010 00:32:48 +0200

netcfg (1.52) unstable; urgency=low

  [ Aurelien Jarno ]
  * Loopback network interface name is lo on GNU/Linux and lo0 on
    GNU/kFreeBSD; generalize it with a macro.
  * Build the netcfg binary package on sh4.

  [ Otavio Salvador ]
  * Add support to disable network configuration using preseeding in
    netcfg/enable template. Thanks to Anthony L. Awtrey
    <tony@awtrey.com> for the patch. Closes: #538265

  [ Colin Watson ]
  * On Linux, feed the output of 'ip addr show' into /dev/random after the
    network is up to improve entropy. Idea picked up from Theodore Y. Ts'o,
    http://lkml.org/lkml/2007/12/8/108.
  * Upgrade to debhelper v7.
  * Tell dhclient to wait for netcfg/dhcp_timeout seconds before exiting
    (closes: #566006, LP: #315231).

  [ Otavio Salvador ]
  * Use busybox' udhcpc by default but kfreebsd-amd64 and kfreebsd-i386
    since they lack support in busybox at this moment.

  [ Frans Pop ]
  * Remove no longer needed Lintian override for missing Standards-
    Version field.
  * Disable wireless support for s390.
  * Fix FTBS on s390 caused by upgrade to debhelper v7.
  * Drop support for the discontinued lpia architecture.
  * Improve test for presence of dhcp/dhcp3.
  * Don't ship unnecessary/unused dhcp directories.

 -- Otavio Salvador <otavio@debian.org>  Sun, 21 Feb 2010 23:02:42 -0300

netcfg (1.51) unstable; urgency=low

  [ Luca Favatella ]
  * /var/run/stab is Linux PCMCIA specific; provide a stub implementation of
    find_in_stab for non-Linux systems.
  * Don't build-dep on libiw-dev on kfreebsd-{i386,amd64}.