@@ -20,6 +20,7 @@ netcfg (1.53) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * simplify kfreebsd dependencies.
   * depends on freebsd-net-tools-udeb on kfreebsd.
+  * add support for GNU/kFreeBSD.
 
  -- Frans Pop <fjp@debian.org>  Thu, 08 Apr 2010 00:32:48 +0200
 
